# AsterFlow

./: Project.toml  README.md  push.sh
.github/workflows/: CI.yml
aster_native/: CMakeLists.txt  README.md
aster_native/ATen/: Backend.h
aster_native/AsterNative/: AsterNative.h  Backend.h  CMakeLists.txt  Context.cpp  Context.h  Device.cpp  Device.h  Dispatch.h
aster_native/AsterNative/accelerator/: Accelerator.cpp  Accelerator.h
aster_native/AsterNative/autograd/: GradMode.h
aster_native/AsterNative/c_api/: native_c_api.cpp
aster_native/AsterNative/core/: DispatchKey.h  Layout.h  ScalarType.h  Storage.cpp  Storage.h  TensorImpl.cpp  TensorImpl.h  TensorOptions.h
aster_native/AsterNative/cpu/: CPUGuard.h
aster_native/AsterNative/cuda/: CudaDevice.h
aster_native/AsterNative/detail/: Exception.h
aster_native/AsterNative/hip/: HipDevice.h
aster_native/AsterNative/impl/: DeviceGuard.h
aster_native/AsterNative/mps/: MpsDevice.h
aster_native/AsterNative/native/: NativeOps.h  native_stub.cpp
aster_native/AsterNative/native/cpu/: f32_kernels.cpp  f32_kernels.hpp
aster_native/AsterNative/ops/: OpRegistry.h
aster_native/AsterNative/xpu/: XpuDevice.h
aster_native/include/: asterflow_native.h
aster_native/tests/: test_native_kernels.cpp
benchmark/: micro.jl
docs/: README.md  RELEASE_v0.1.0-alpha.md  accelerator-streams.md  api-reference.md  autograd-view-semantics.md  broadcasting-autograd.md  build-and-install.md  ddp-design.md  design-principles.md  flux-zygote-interop.md  interop-onnx-hf.md  ir-concept.md  memory-abi.md  op-contract.md  pytorch-api-parity.md  roadmap-performance.md  testing-cuda.md  tutorial-getting-started.md
examples/: README.md  char_lm_tiny.jl  corpus_tiny.txt  custom_op_register.jl  mnist_tiny_mlp.jl  speech_frame_classifier.jl  tiny_mlp_train.jl
ext/: AsterFlowCUDAExt.jl  AsterFlowHuaweiAscendExt.jl  AsterFlowROCMExt.jl  AsterFlowRockchipNPUExt.jl
libasterflow/: CMakeLists.txt  README.md  asterflow.c
libasterflow/include/: asterflow_c_api.h
src/: AsterFlow.jl  accelerator_dispatch.jl  amp.jl  autograd.jl  checkpoint.jl  device_tensor.jl  devices.jl  dispatch.jl  grad_mode.jl  graph.jl  layout.jl  libasterflow.jl  libasterflow_native.jl  loading.jl  native.jl  ops.jl  ops_helpers.jl  storage.jl  tensor.jl
src/compile/: codegen_stub.jl  fusion.jl  ir.jl  serialize.jl  trace.jl
src/data/: dataset.jl
src/distributed/: ddp_stub.jl
src/layers/: activation.jl  conv.jl  dropout.jl  flatten.jl  functional.jl  init.jl  linear.jl  module.jl  norm.jl
src/losses/: functions.jl
src/optimise/: adadelta.jl  adafactor.jl  adagrad.jl  adam.jl  adamax.jl  adamw.jl  fused.jl  gpu_optim.jl  lion.jl  lookahead.jl  radam.jl  rmsprop.jl  sgd.jl  sophia.jl
src/transformer/: blocks.jl
test/: gradcheck_ops.jl  runtests.jl
